--- a/WebRTC-iOS-Client/WebRTC-iOS-Client/Base.lproj/Main.storyboard
+++ b/WebRTC-iOS-Client/WebRTC-iOS-Client/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Dq9-hd-f3W">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--HomeVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="HomeVC" customModule="WebRTC_iOS_Client" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +20,90 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vHT-Dt-UL1">
+                                <rect key="frame" x="132.5" y="312" width="109" height="42"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <state key="normal" title="Start chat"/>
+                                <connections>
+                                    <action selector="startChat:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ZUP-9k-113"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Your name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xSO-ob-GfE">
+                                <rect key="frame" x="47" y="181" width="280" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="280" id="o40-K7-via"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="EaP-wO-K3x">
+                                <rect key="frame" x="137.5" y="234" width="100" height="29"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="bcp-Cu-jOj"/>
+                                </constraints>
+                                <segments>
+                                    <segment title="男"/>
+                                    <segment title="女"/>
+                                </segments>
+                            </segmentedControl>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="EaP-wO-K3x" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2j3-NX-kf0"/>
+                            <constraint firstItem="EaP-wO-K3x" firstAttribute="top" secondItem="xSO-ob-GfE" secondAttribute="bottom" constant="23" id="8Y3-GK-Taf"/>
+                            <constraint firstItem="xSO-ob-GfE" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="9X1-s6-gO0"/>
+                            <constraint firstItem="vHT-Dt-UL1" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Bw1-Ye-fXz"/>
+                            <constraint firstItem="vHT-Dt-UL1" firstAttribute="top" secondItem="xSO-ob-GfE" secondAttribute="bottom" constant="101" id="FX9-xc-GbG"/>
+                            <constraint firstItem="vHT-Dt-UL1" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="flY-Fk-VeM"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="aLR-hL-MOp"/>
+                    <connections>
+                        <outlet property="genderPicker" destination="EaP-wO-K3x" id="e3P-CP-NXM"/>
+                        <outlet property="nameField" destination="xSO-ob-GfE" id="6iL-q6-byj"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="877.60000000000002" y="790.25487256371821"/>
+        </scene>
+        <!--DialingVC-->
+        <scene sceneID="4u7-7s-EZs">
+            <objects>
+                <viewController id="OZR-Y8-Wrh" customClass="DialingVC" customModule="WebRTC_iOS_Client" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Fcq-Wk-u8D"/>
+                        <viewControllerLayoutGuide type="bottom" id="XQo-E7-hjP"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="PXK-ZU-Doj">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8yt-1E-MEt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1644" y="791"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="9yV-hb-mee">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Dq9-hd-f3W" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="DNF-Mk-c0w">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="DJe-YW-9JS"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="G4Y-Ld-hhd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="791.15442278860576"/>
         </scene>
     </scenes>
 </document>
